mengubah,menambah, dan mengurangi data

--- a/perpustakaan/templates/buku.html
+++ b/perpustakaan/templates/buku.html
@@ -2,12 +2,36 @@
 
 {% block content %}
 
-    <h2>Daftar Buku</h2>
-    
-    {% for buku in books %}
-        <li>{{ buku.judul }}</li>
-    {% endfor %}
-
-    {{ penulis }}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h3> Data Buku
+                <a href={% url 'tambah_buku' %}>Tambah</a>
+            </h3>
+            <table class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>JUDUL</th>
+                        <th>PENULIS</th>
+                        <th>PENERBIT</th>
+                        <th>JUMLAH</th>
+                        <th>KELOMPOK</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for buku in books %}
+                    <tr>
+                        <td><a href="{% url 'ubah_buku' buku.id %}">{{ buku.judul }}</a></td>
+                        <td>{{ buku.penulis }}</td>
+                        <td>{{ buku.penerbit }}</td>
+                        <td>{{ buku.jumlah }}</td>
+                        <td>{{ buku.kelompok_id }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>        
 
 {% endblock %}
